syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rose.msgservice.grpc";
option java_outer_classname = "CoreGrpcMsgApi";

package grpc;

message GrpcMessage {
    string system_id = 1;
    string body = 2;
}

message GrpcMessageReq {
}

service GrpcMessageService {
    rpc GetAllMessages(GrpcMessageReq) returns (GrpcMessage);
}